[package]
name = "hxh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-syringe = "0.15.0"
eframe = { version = "0.21.3", features = ["persistence"] }
serde = { version = "1.0.160", features = ["derive"] }
